[package]
name = "delays-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
stylist = {version="0.11", features = ["yew_integration"]}
gloo = "0.9.0"
wasm-bindgen = "0.2.87"
web-sys = {version="0.3.64", features = ["HtmlInputElement"]}
delays = { path = "../delays" }