[package]
name = "delays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
csv = "1.2.2"

# app dependencies
yew = { version = "0.20", features = ["csr"], optional = true }
stylist = { version="0.11", features = ["yew_integration"], optional = true }
gloo = { version="0.9.0", optional = true }
wasm-bindgen = { version="0.2.87", optional = true }
web-sys = {version="0.3.64", features = ["HtmlInputElement"], optional = true }

[features]
app-deps = ["yew", "stylist", "gloo", "wasm-bindgen", "web-sys"]

[lib]
name = "delays"
path = "src/lib/lib.rs"

[[bin]]
name = "app"
path = "src/bin/main.rs"
required-feature = ["app-deps"]